--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -2,18 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "ready-living",
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: flickrapi in c:\\users\\rxcov\\anaconda3\\envs\\tf\\lib\\site-packages (2.4.0)\n",
+      "Requirement already satisfied: requests-toolbelt>=0.3.1 in c:\\users\\rxcov\\anaconda3\\envs\\tf\\lib\\site-packages (from flickrapi) (0.9.1)\n",
+      "Requirement already satisfied: requests-oauthlib>=0.4.0 in c:\\users\\rxcov\\anaconda3\\envs\\tf\\lib\\site-packages (from flickrapi) (1.3.0)\n",
+      "Requirement already satisfied: requests>=2.2.1 in c:\\users\\rxcov\\anaconda3\\envs\\tf\\lib\\site-packages (from flickrapi) (2.25.1)\n",
+      "Requirement already satisfied: six>=1.5.2 in c:\\users\\rxcov\\anaconda3\\envs\\tf\\lib\\site-packages (from flickrapi) (1.15.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\rxcov\\anaconda3\\envs\\tf\\lib\\site-packages (from requests>=2.2.1->flickrapi) (2020.12.5)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\rxcov\\anaconda3\\envs\\tf\\lib\\site-packages (from requests>=2.2.1->flickrapi) (1.26.4)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\rxcov\\anaconda3\\envs\\tf\\lib\\site-packages (from requests>=2.2.1->flickrapi) (2.10)\n",
+      "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\rxcov\\anaconda3\\envs\\tf\\lib\\site-packages (from requests>=2.2.1->flickrapi) (3.0.4)\n",
+      "Requirement already satisfied: oauthlib>=3.0.0 in c:\\users\\rxcov\\anaconda3\\envs\\tf\\lib\\site-packages (from requests-oauthlib>=0.4.0->flickrapi) (3.1.0)\n"
+     ]
+    }
+   ],
    "source": [
     "# !pip3 install flickrapi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "legislative-banana",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +85,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "connected-appreciation",
    "metadata": {},
    "source": [
     "## Google Images Scraper\n",
@@ -82,33 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "better-monitoring",
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting selenium\n",
-      "  Using cached selenium-3.141.0-py2.py3-none-any.whl (904 kB)\n",
-      "Requirement already satisfied: urllib3 in c:\\users\\rxcov\\anaconda3\\envs\\tf\\lib\\site-packages (from selenium) (1.26.4)\n",
-      "Installing collected packages: selenium\n",
-      "Successfully installed selenium-3.141.0\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'webdriver' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-30afa7a04fee>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'pip3 install selenium'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mdef\u001b[0m \u001b[0mfetch_image_urls\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_links_to_fetch\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwd\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mwebdriver\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msleep_between_interactions\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mscroll_to_end\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwd\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mwd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute_script\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"window.scrollTo(0, document.body.scrollHeight);\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'webdriver' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip3 install selenium\n",
     "\n",
@@ -170,10 +160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "charged-gateway",
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: Pillow in c:\\users\\manpr\\anaconda3\\lib\\site-packages (7.2.0)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip3 install Pillow\n",
     "import io\n",
@@ -202,8 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "intermediate-operations",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,10 +218,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "painted-scene",
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found: 100 search results. Extracting links from 0:100\n",
+      "Found: 2 image links, done!\n",
+      "SUCCESS - saved https://upload.wikimedia.org/wikipedia/commons/6/6c/Abhar-iran.JPG - as ./images\\grapes\\1d3a05494b.jpg\n",
+      "SUCCESS - saved https://www.morethanshipping.com/wp-content/uploads/2020/08/us-leader-in-grapes-mts-2020.jpg - as ./images\\grapes\\4afcf1fac8.jpg\n",
+      "Found: 100 search results. Extracting links from 0:100\n",
+      "Found: 2 image links, done!\n",
+      "SUCCESS - saved https://www.sonachgefuehl.de/wp-content/uploads/2019/05/Caesar_Salad_01.jpg - as ./images\\salad\\aa9878a252.jpg\n",
+      "SUCCESS - saved https://image.essen-und-trinken.de/11952552/t/QD/v10/w960/r1/-/eut-mit-thermomix-201802016-chicken-caesar-salad-jpg--65187-.jpg - as ./images\\salad\\9da30d839b.jpg\n",
+      "Found: 100 search results. Extracting links from 0:100\n",
+      "Found: 2 image links, done!\n",
+      "SUCCESS - saved https://img.chefkoch-cdn.de/rezepte/1576041265136617/bilder/823227/crop-960x720/risotto-grundrezept-mit-vier-abwandlungen.jpg - as ./images\\risotto\\5da7adc986.jpg\n",
+      "SUCCESS - saved https://assets.tmecosys.com/image/upload/t_web767x639/img/recipe/ras/Assets/8D2A0883-95BA-4C9F-A575-303577F532D4/Derivates/A87AD746-0DFD-49AE-B1B2-071227001579.jpg - as ./images\\risotto\\e7a0682cca.jpg\n"
+     ]
+    }
+   ],
    "source": [
     "foods = ['grapes',\n",
     " 'salad',\n",
@@ -249,7 +263,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "optimum-recipient",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -271,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
